# segy-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: compare_segyio.py
python/: main.py  pyproject.toml
python/fastsegy/: __init__.py  _fastsegy.pyi  processing.py
python/fastsegy/gui/: app.py  function_dialogs.py  plotting.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
tests/: test_filters.py
