[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fastsegy"
version = "0.1.0"
description = "Fast SEG-Y file parser using Rust"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "segyio>=1.9",
    "pytest>=7.0",
]

[tool.maturin]
python-source = "python"
manifest-path = "Cargo.toml"
module-name = "fastsegy._fastsegy"